test/programs/good/typechecker/reset_2.lq
resetQbit :: () -> Qbit
resetQbit _ = reset (new @0)

main :: Qbit
main = resetQbit ()

