test/programs/bad/typechecker/reset_2.lq
resetQbit :: () -> Qbit
resetQbit _ = reset (measr (new @0))
